--- a/tiny_mrp/mrp/templates/mrp/tolid/partialAssetAmarList.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/partialAssetAmarList.html
@@ -19,7 +19,7 @@
         {% for c in machines %}
         {% if c.shift.id == i.id %}
         <tr data-machine={{c.machine.id}} data-shift="{{i.id}}" data-speed="{{c.speed}}">
-          <td>{{c.machine.assetName}} {{c.amar}}</td>
+          <td>{{c.machine.assetName}}</td>
           <td contenteditable="true" class="editable-cell btc nomre selectable1">{{c.amar.nomre}}</td>
           <td contenteditable="true" class="editable-cell btc counter selectable1">{{c.amar.counter}}</td>
 
@@ -104,24 +104,13 @@
           {% if c.shift.id == 1 %}
 
           <td contenteditable="true" class="editable-cell editable-cell2 speed selectable1" data-nomre={{c.amar.nomre}}>{{c.amar.speed}}</td>
-          <td contenteditable="true" class="editable-cell3 production selectable1" data-formula="{{c.amar.speedformula}}">{{c.amar.eval_max_tolid|floatformat:"2"}}</td>
+          <td contenteditable="true" class="editable-cell3 production selectable1"  data-formula="{{c.speedformula}}">{{c.amar.eval_max_tolid|floatformat:"2"}}</td>
           {% endif %}
 
 
         </tr>
         {% endfor %}
-        {% for c in heatsets %}
-        <tr class="custom-height">
 
-          {% if c.shift.id == 1 %}
-
-          <td   class="editable-cell editable-cell2 speed selectable1" data-nomre={{c.amar.nomre}}>{{c.amar.speed}}</td>
-          <td   class="editable-cell3 production selectable1" data-formula="{{c.amar.speedformula}}">{{c.amar.eval_max_tolid|floatformat:"2"}}</td>
-          {% endif %}
-
-
-        </tr>
-        {% endfor %}
         <!-- Add more rows as needed -->
       </tbody>
     </table>
