--- a/tiny_mrp/mrp/templates/mrp/zayeat_vazn/zayeatVaznList.html
+++ b/tiny_mrp/mrp/templates/mrp/zayeat_vazn/zayeatVaznList.html
@@ -1,91 +1,45 @@
-<!--pip install django-widget-tweaks-->
 {% extends 'mrp/blank-page.html' %}
-
- {% block content %}
-
+{5 load static %}
+{% block content %}
+{% load custom_filters %}
+{% load widget_tweaks %}
 <div class="row">
-  <div class="col-lg-12">
-                    <div class="ibox float-e-margins">
-                        <div class="ibox-title">
-                            <h5>نوع نگهداری </h5>
-                            <div class="ibox-tools">
-                                <a class="collapse-link">
-                                    <i class="fa fa-chevron-up"></i>
-                                </a>
-                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                    <i class="fa fa-wrench"></i>
-                                </a>
+  <h1>ضایعات مربوط به {{jalali}}</h1>
+<div class="col-sm-12 b-r">
+  <input type="hidden" id="js_data"/>
+{% for c in shifts %}
+<h3>{{c.name}}</h3>
+<div class=""> <!-- Required for Responsive -->
+  <table class="table table-striped table-bordered tbl-zayeat-vazn">
+    <thead>
+      <tr>
+        {% for i in zayeat %}
+        <th>{{i.name}}</th>
+        {% endfor %}
+      </tr>
+    </thead>
+    <tbody>
+      {% for i in zayeat %}
 
-                                <a class="close-link">
-                                    <i class="fa fa-times"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="ibox-content">
+      <td  class="editable-cell" data-shift={{c.id}} data-date={{date}} data-id="{{i.id}}" style="  width: 100px; /* Set the width of the editable cell */   min-width: 100px; /* Ensure a minimum width */    max-width: 100px; /* Ensure a maximum width */    outline: none; /* Remove the default focus outline */    border: 1px solid #ccc; /* Add a border for better visibility */    padding: 5px; /* Add padding for better appearance */    /* Other styles as needed */">
+        {% if zayeat_vazn %}
+        {{zayeat_vazn|get_item:i.id|get_item_from_shift:c.id}}
+        {% else %}
+        0
+        {% endif %}
+      </td>
+      {% endfor %}
 
-                            <div class="table-responsive">
-                                <table class="table table-striped" id="company-table">
-                                    <thead>
-                                    <tr>
-                                      <th></th>
-                                      <th>نام</th>
+    </tbody>
 
-                                      <th>توضیح</th>
-
-                                      <th>رنگ</th>
-
-
-
-
-
-
-
-                                        <th></th>
-
-                                    </tr>
-
-                                    </thead>
-                                    <tbody id='tbody_company'>
-                                            {% include 'myapp//partialMaintenanceTypeList.html' %}
-                                    </tbody>
-                                </table>
-                                <!-- BUTTON TO TRIGGER THE ACTION -->
-                                {% if perms.cmms.add_maintenancetype %}
-                                <p>
-                                  <button type="button" class="btn btn-primary js-create-maintenanceType"
-                                  data-url="{% url 'maintenanceType_create' %}"                                  >
-                                    <span class="glyphicon glyphicon-plus"
-
-
-
-                                    ></span>
-                                  جدید
-                                  </button>
-                                </p>
-                                {% endif %}
-                            </div>
-                          </div>
-
-                    </div>
-                </div>
-                <div class="modal fade" id="modal-company">
-                 <div class="modal-dialog  modal-lg ">
-
-                   <div class="modal-content ">
-                   </div>
-                 </div>
-                </div>
-
-
+  </table>
+</div>
+<hr/>
+{%endfor%}
 
 
 </div>
 
 
-{% load static %}
-
-{% block javascript %}
-
-  <script src="{% static '/js/project/maintenancetype.js' %}"></script>
-{% endblock %}
+</div>
 {% endblock %}
