--- a/tiny_mrp/mrp/templates/mrp/tolid/heatset_details.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/heatset_details.html
@@ -116,7 +116,7 @@
                                       <td contenteditable="true" data-formula="{{c.formula}}" class="editable-cell btc vazne_daf selectable1"></td>
                                       <td contenteditable="true" class="editable-cell btc vazne_baghi selectable1">0</td>
                                       <td>
-                                        <button type="button" class="btn btn-outline-secondary js_daf_metraj_create" data-metraj='' data-metraj-total='' data-machine={{c.machine.id}} data-shift="{{i.id}}" data-url="{% url 'tolid_heatset_metraj_create' %}">
+                                        <button type="button" class="btn btn-outline-secondary js_daf_metraj_create" data-metraj='{{c.metraj}}' data-metraj-total='' data-machine={{c.machine.id}} data-shift="{{i.id}}" data-url="{% url 'tolid_heatset_metraj_create' %}">
                                 <i class="ti-check-box"></i>
                             </button>
                                       </td>
