--- a/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
+++ b/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
@@ -375,6 +375,73 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between">
+                            <h6 class="card-title">پرفروشترین محصولات</h6>
+                            <div>
+                                <a href="#" class="mr-3">
+                                    <i class="fa fa-refresh"></i>
+                                </a>
+                                <span class="dropdown">
+                                    <a href="#" data-toggle="dropdown" aria-haspopup="true"
+                                       aria-expanded="false">
+                                        <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                    </a>
+                                    <span class="dropdown-menu dropdown-menu-left">
+                                        <a href="#" class="dropdown-item">گزارش</a>
+                                        <a href="#" class="dropdown-item">دانلود</a>
+                                        <a href="#" class="dropdown-item">بستن</a>
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                             <!-- <canvas id="hot-products"></canvas>
+                             <div id="hot-products-legends"></div> -->
+                       
+
+
+                             <div id="center">
+                                <canvas id="canvas" width="600" height="400"></canvas>
+                             </div>
+                        <!-- <div class="card">
+                                <canvas id="countries"></canvas>
+                        </div> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between">
+                            <h6 class="card-title">درآمد</h6>
+                            <div>
+                                <a href="#" class="mr-3">
+                                    <i class="fa fa-refresh"></i>
+                                </a>
+                                <span class="dropdown">
+                                    <a href="#" data-toggle="dropdown" aria-haspopup="true"
+                                       aria-expanded="false">
+                                        <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                    </a>
+                                    <span class="dropdown-menu dropdown-menu-left">
+                                        <a href="#" class="dropdown-item">گزارش</a>
+                                        <a href="#" class="dropdown-item" >دانلود</a>
+                                        <a href="#" class="dropdown-item">بستن</a>
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                        <div id="revenue"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    
+
 
 
 {% endblock %}
