--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -63,6 +63,11 @@
           <i data-feather="command"></i>
         </a>
       </li>
+      <li>
+        <a href="#" data-toggle="tooltip" data-placement="right" title="راندمان" data-nav-target="#apps2">
+          <i data-feather="coffee"></i>
+        </a>
+      </li>
 
   </ul>
 </div>
@@ -156,6 +161,19 @@
 
         </a>
       </li>
+
+    </ul>
+  </div>
+  <div id="apps2">
+    <ul>
+      <li class="navigation-divider">راندمان</li>
+      <li>
+        <a href="{% url 'asset_randeman_list' %}">
+          <span>راندمان</span>
+
+        </a>
+      </li>
+
 
     </ul>
   </div>
