--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
@@ -1,11 +1,7 @@
 {% extends 'mrp/blank-page.html' %}
 {% load static %}
 {% load humanize %}
-{% block stylesheet %}
-   <!-- Clockpicker -->
-   <link rel="stylesheet" href="{% static 'vendors/clockpicker/bootstrap-clockpicker.min.css' %}" type="text/css">
 
-{% endblock %}
 {% block content %}
 <div class="row app-block">
 
@@ -22,7 +18,7 @@
                       </div>
                       <div class="table-responsive"> <!-- Required for Responsive -->
                         <table class="table table-striped table-bordered" id="company-table">
-                          <thead class="bg-success">
+                          <thead class="bg-info-gradient">
                             <tr>
 
                               <th>نام دستگاه</th>
@@ -112,9 +108,7 @@
 
 
                     </div>
-                    <div class="clear">
-
-                    </div>
+                    <hr/>
                     {% endfor %}
 
                   </div>
