--- a/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
+++ b/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
@@ -129,7 +129,7 @@
         <div class="card">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
-                    <h6 class="card-title">پرفروشترین محصولات</h6>
+                    <h6 class="card-title">میزان ضایعات</h6>
                     <div>
                         <a href="#" class="mr-3">
                             <i class="fa fa-refresh"></i>
@@ -153,7 +153,8 @@
 
 
                      <div id="center">
-                        <canvas id="canvas" width="600" height="400"></canvas>
+
+                        <div id="pieChart"></div>
                      </div>
                 <!-- <div class="card">
                         <canvas id="countries"></canvas>
@@ -188,6 +189,45 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-6">
+        <div class="card">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <h6 class="card-title">میزان ضایعات</h6>
+                    <div>
+                        <a href="#" class="mr-3">
+                            <i class="fa fa-refresh"></i>
+                        </a>
+                        <span class="dropdown">
+                            <a href="#" data-toggle="dropdown" aria-haspopup="true"
+                               aria-expanded="false">
+                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                            </a>
+                            <span class="dropdown-menu dropdown-menu-left">
+                                <a href="#" class="dropdown-item">گزارش</a>
+                                <a href="#" class="dropdown-item">دانلود</a>
+                                <a href="#" class="dropdown-item">بستن</a>
+                            </span>
+                        </span>
+                    </div>
+                </div>
+                     <!-- <canvas id="hot-products"></canvas>
+                     <div id="hot-products-legends"></div> -->
+
+
+
+                     <div id="center">
+
+                        <div id="lineAssetFailureChart"></div>
+                     </div>
+                <!-- <div class="card">
+                        <canvas id="countries"></canvas>
+                </div> -->
+            </div>
+        </div>
+    </div>
+    </div>
 <div class="row">
 
     <div class="col-md-12">
@@ -524,7 +564,7 @@
 
 
 <!-- Dashboard scripts -->
-<script src="{% static 'assets/js/examples/dashboard.js' %}"></script>
+
 <!-- App scripts -->
 <script src="{% static 'assets/js/app.min.js' %}"></script>
 <script src="{% static 'project/dash.js' %}"></script>
