--- a/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
+++ b/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
@@ -6,11 +6,8 @@
       <div class="col-md-12 app-content">
         <div></div>
         <div class="app-action">
-            <div class="action-left">
-
-
-            </div>
-            <div class="action-right">
+            
+            <div class="row">
 
               <div class="form-row">
                                   <div class="form-group col-md-6">
@@ -33,7 +30,15 @@
                                             </span>
                                         </div>
                                     </div>
+                                    <div class="input-group">
+                                        <select name="" id="" class="form-control">
+                                            {% for i in assets %}
+                                            <option value="{{i.value}}">{{i.assetName}}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
                                   </div>
+                                  
                               </div>
 
 
@@ -295,7 +300,7 @@
 
                      <div id="center">
 
-                        <div id="lineAssetFailureCurrentYear"></div>
+                        <div id="lineZayeatCurrentYear"></div>
                      </div>
                 <!-- <div class="card">
                         <canvas id="countries"></canvas>
@@ -332,7 +337,7 @@
 
                      <div id="center">
 
-                        <div id="stackeAssetFailureCurrentYear"></div>
+                        <div id="stackeZayeatCurrentYear"></div>
                      </div>
                 <!-- <div class="card">
                         <canvas id="countries"></canvas>
@@ -342,6 +347,83 @@
     </div>
 
     </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                        <h6 class="card-title">ضایعات ماهانه</h6>
+                        <div>
+                            <a href="#" class="mr-3">
+                                <i class="fa fa-refresh"></i>
+                            </a>
+                            <span class="dropdown">
+                                <a href="#" data-toggle="dropdown" aria-haspopup="true"
+                                   aria-expanded="false">
+                                    <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                </a>
+                                <span class="dropdown-menu dropdown-menu-left">
+                                    <a href="#" class="dropdown-item">گزارش</a>
+                                    <a href="#" class="dropdown-item">دانلود</a>
+                                    <a href="#" class="dropdown-item">بستن</a>
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                         <!-- <canvas id="hot-products"></canvas>
+                         <div id="hot-products-legends"></div> -->
+    
+    
+    
+                         <div id="center">
+    
+                            <div id="lineAssetFailureCurrentYear"></div>
+                         </div>
+                    <!-- <div class="card">
+                            <canvas id="countries"></canvas>
+                    </div> -->
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                        <h6 class="card-title">ضایعات ماهانه</h6>
+                        <div>
+                            <a href="#" class="mr-3">
+                                <i class="fa fa-refresh"></i>
+                            </a>
+                            <span class="dropdown">
+                                <a href="#" data-toggle="dropdown" aria-haspopup="true"
+                                   aria-expanded="false">
+                                    <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                </a>
+                                <span class="dropdown-menu dropdown-menu-left">
+                                    <a href="#" class="dropdown-item">گزارش</a>
+                                    <a href="#" class="dropdown-item">دانلود</a>
+                                    <a href="#" class="dropdown-item">بستن</a>
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                         <!-- <canvas id="hot-products"></canvas>
+                         <div id="hot-products-legends"></div> -->
+    
+    
+    
+                         <div id="center">
+    
+                            <div id="stackeAssetFailureCurrentYear"></div>
+                         </div>
+                    <!-- <div class="card">
+                            <canvas id="countries"></canvas>
+                    </div> -->
+                </div>
+            </div>
+        </div>
+    
+        </div>
    
 
 
