--- a/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
+++ b/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
@@ -6,7 +6,7 @@
       <div class="col-md-12 app-content">
         <div></div>
         <div class="app-action">
-            
+
             <div class="row">
 
               <div class="form-row">
@@ -38,7 +38,7 @@
                                         </select>
                                     </div>
                                   </div>
-                                  
+
                               </div>
 
 
@@ -54,11 +54,11 @@
             <div class="card-body">
                 <div class="row align-items-center">
                     <div class="col-md-7">
-                        <h6 class="card-title mb-3">خوش برگشتی !</h6>
-                        <p>با چک کردن قسمت های مختلف بیشتر با سایت آشنا شو لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+                        <h6 class="card-title mb-3">خوش آمدید</h6>
+                        <p>"به سیستم MRP خوش آمدید. اینجا کنترل کامل بر تمام جنبه‌های فرآیند تولید در اختیار شماست. از پیش‌بینی تقاضا گرفته تا برنامه‌ریزی خرید و مدیریت موجودی، هر چیزی برای افزایش بهره‌وری و کاهش هزینه‌ها در دستان شماست. لطفا اطلاعات مورد نیاز را وارد کنید تا فرآیند برنامه‌ریزی آغاز شود."</p>
                         <ul class="mb-3">
-                            <li>این قسمت ها را مشاهده کنید</li>
-                            <li>مخاطبان خود را اضافه کنید</li>
+                            <li></li>
+                            <li></li>
                         </ul>
                         <a href="#" class="btn bg-white">بیشتر بدانید</a>
                     </div>
@@ -73,7 +73,7 @@
         <div class="card">
             <div class="card-body">
                 <div class="card-title d-flex justify-content-between">
-                    <h6 class="card-title">فروش کلی </h6>
+                    <h6 class="card-title">تولید کلی </h6>
                     <div>
                         <div class="dropdown">
                             <a href="#" data-toggle="dropdown" aria-haspopup="true"
@@ -166,36 +166,6 @@
                 </div> -->
             </div>
         </div>
-    </div>
-    <div class="col-md-6">
-        <div class="card">
-            <div class="card-body">
-                <div class="d-flex justify-content-between">
-                    <h6 class="card-title">ضایعات</h6>
-                    <div>
-                        <a href="#" class="mr-3">
-                            <i class="fa fa-refresh"></i>
-                        </a>
-                        <span class="dropdown">
-                            <a href="#" data-toggle="dropdown" aria-haspopup="true"
-                               aria-expanded="false">
-                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-                            </a>
-                            <span class="dropdown-menu dropdown-menu-left">
-                                <a href="#" class="dropdown-item">گزارش</a>
-                                <a href="#" class="dropdown-item" >دانلود</a>
-                                <a href="#" class="dropdown-item">بستن</a>
-                            </span>
-                        </span>
-                    </div>
-                </div>
-                <div id="mychart"></div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-6">
         <div class="card">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
@@ -231,47 +201,6 @@
                 </div> -->
             </div>
         </div>
-    </div>
-    <div class="col-md-6">
-        <div class="card">
-            <div class="card-body">
-                <div class="d-flex justify-content-between">
-                    <h6 class="card-title">حجم توقفات</h6>
-                    <div>
-                        <a href="#" class="mr-3">
-                            <i class="fa fa-refresh"></i>
-                        </a>
-                        <span class="dropdown">
-                            <a href="#" data-toggle="dropdown" aria-haspopup="true"
-                               aria-expanded="false">
-                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-                            </a>
-                            <span class="dropdown-menu dropdown-menu-left">
-                                <a href="#" class="dropdown-item">گزارش</a>
-                                <a href="#" class="dropdown-item">دانلود</a>
-                                <a href="#" class="dropdown-item">بستن</a>
-                            </span>
-                        </span>
-                    </div>
-                </div>
-                     <!-- <canvas id="hot-products"></canvas>
-                     <div id="hot-products-legends"></div> -->
-
-
-
-                     <div id="center">
-
-                        <div id="PieAssetFailureChart"></div>
-                     </div>
-                <!-- <div class="card">
-                        <canvas id="countries"></canvas>
-                </div> -->
-            </div>
-        </div>
-    </div>
-    </div>
-<div class="row">
-    <div class="col-md-6">
         <div class="card">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
@@ -307,8 +236,102 @@
                 </div> -->
             </div>
         </div>
+        <div class="card">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <h6 class="card-title">توقفات ماهیانه</h6>
+                    <div>
+                        <a href="#" class="mr-3">
+                            <i class="fa fa-refresh"></i>
+                        </a>
+                        <span class="dropdown">
+                            <a href="#" data-toggle="dropdown" aria-haspopup="true"
+                               aria-expanded="false">
+                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                            </a>
+                            <span class="dropdown-menu dropdown-menu-left">
+                                <a href="#" class="dropdown-item">گزارش</a>
+                                <a href="#" class="dropdown-item">دانلود</a>
+                                <a href="#" class="dropdown-item">بستن</a>
+                            </span>
+                        </span>
+                    </div>
+                </div>
+                     <!-- <canvas id="hot-products"></canvas>
+                     <div id="hot-products-legends"></div> -->
+
+
+
+                     <div id="center">
+
+                        <div id="lineAssetFailureCurrentYear"></div>
+                     </div>
+                <!-- <div class="card">
+                        <canvas id="countries"></canvas>
+                </div> -->
+            </div>
+        </div>
     </div>
     <div class="col-md-6">
+        <div class="card">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <h6 class="card-title">ضایعات</h6>
+                    <div>
+                        <a href="#" class="mr-3">
+                            <i class="fa fa-refresh"></i>
+                        </a>
+                        <span class="dropdown">
+                            <a href="#" data-toggle="dropdown" aria-haspopup="true"
+                               aria-expanded="false">
+                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                            </a>
+                            <span class="dropdown-menu dropdown-menu-left">
+                                <a href="#" class="dropdown-item">گزارش</a>
+                                <a href="#" class="dropdown-item" >دانلود</a>
+                                <a href="#" class="dropdown-item">بستن</a>
+                            </span>
+                        </span>
+                    </div>
+                </div>
+                <div id="mychart"></div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <h6 class="card-title">حجم توقفات</h6>
+                    <div>
+                        <a href="#" class="mr-3">
+                            <i class="fa fa-refresh"></i>
+                        </a>
+                        <span class="dropdown">
+                            <a href="#" data-toggle="dropdown" aria-haspopup="true"
+                               aria-expanded="false">
+                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                            </a>
+                            <span class="dropdown-menu dropdown-menu-left">
+                                <a href="#" class="dropdown-item">گزارش</a>
+                                <a href="#" class="dropdown-item">دانلود</a>
+                                <a href="#" class="dropdown-item">بستن</a>
+                            </span>
+                        </span>
+                    </div>
+                </div>
+                     <!-- <canvas id="hot-products"></canvas>
+                     <div id="hot-products-legends"></div> -->
+
+
+
+                     <div id="center">
+
+                        <div id="PieAssetFailureChart"></div>
+                     </div>
+                <!-- <div class="card">
+                        <canvas id="countries"></canvas>
+                </div> -->
+            </div>
+        </div>
         <div class="card">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
@@ -344,87 +367,72 @@
                 </div> -->
             </div>
         </div>
+        <div class="card">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <h6 class="card-title">توقفات امسال</h6>
+                    <div>
+                        <a href="#" class="mr-3">
+                            <i class="fa fa-refresh"></i>
+                        </a>
+                        <span class="dropdown">
+                            <a href="#" data-toggle="dropdown" aria-haspopup="true"
+                               aria-expanded="false">
+                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                            </a>
+                            <span class="dropdown-menu dropdown-menu-left">
+                                <a href="#" class="dropdown-item">گزارش</a>
+                                <a href="#" class="dropdown-item">دانلود</a>
+                                <a href="#" class="dropdown-item">بستن</a>
+                            </span>
+                        </span>
+                    </div>
+                </div>
+                     <!-- <canvas id="hot-products"></canvas>
+                     <div id="hot-products-legends"></div> -->
+
+
+
+                     <div id="center">
+
+                        <div id="stackeAssetFailureCurrentYear"></div>
+                     </div>
+                <!-- <div class="card">
+                        <canvas id="countries"></canvas>
+                </div> -->
+            </div>
+        </div>
+
+
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6">
+
+    </div>
+    <div class="col-md-6">
+
+    </div>
+    </div>
+<div class="row">
+    <div class="col-md-6">
+
+    </div>
+    <div class="col-md-6">
+
     </div>
 
     </div>
     <div class="row">
         <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between">
-                        <h6 class="card-title">ضایعات ماهانه</h6>
-                        <div>
-                            <a href="#" class="mr-3">
-                                <i class="fa fa-refresh"></i>
-                            </a>
-                            <span class="dropdown">
-                                <a href="#" data-toggle="dropdown" aria-haspopup="true"
-                                   aria-expanded="false">
-                                    <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-                                </a>
-                                <span class="dropdown-menu dropdown-menu-left">
-                                    <a href="#" class="dropdown-item">گزارش</a>
-                                    <a href="#" class="dropdown-item">دانلود</a>
-                                    <a href="#" class="dropdown-item">بستن</a>
-                                </span>
-                            </span>
-                        </div>
-                    </div>
-                         <!-- <canvas id="hot-products"></canvas>
-                         <div id="hot-products-legends"></div> -->
-    
-    
-    
-                         <div id="center">
-    
-                            <div id="lineAssetFailureCurrentYear"></div>
-                         </div>
-                    <!-- <div class="card">
-                            <canvas id="countries"></canvas>
-                    </div> -->
-                </div>
-            </div>
+
         </div>
         <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between">
-                        <h6 class="card-title">ضایعات ماهانه</h6>
-                        <div>
-                            <a href="#" class="mr-3">
-                                <i class="fa fa-refresh"></i>
-                            </a>
-                            <span class="dropdown">
-                                <a href="#" data-toggle="dropdown" aria-haspopup="true"
-                                   aria-expanded="false">
-                                    <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-                                </a>
-                                <span class="dropdown-menu dropdown-menu-left">
-                                    <a href="#" class="dropdown-item">گزارش</a>
-                                    <a href="#" class="dropdown-item">دانلود</a>
-                                    <a href="#" class="dropdown-item">بستن</a>
-                                </span>
-                            </span>
-                        </div>
-                    </div>
-                         <!-- <canvas id="hot-products"></canvas>
-                         <div id="hot-products-legends"></div> -->
-    
-    
-    
-                         <div id="center">
-    
-                            <div id="stackeAssetFailureCurrentYear"></div>
-                         </div>
-                    <!-- <div class="card">
-                            <canvas id="countries"></canvas>
-                    </div> -->
-                </div>
-            </div>
+
         </div>
-    
+
         </div>
-   
+
 
 
 
